--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
+    "next-images": "^1.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "swr": "^2.1.2"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
@@ -24,7 +26,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "eslint-plugin-jest": "^27.1.6",
-    "jest": "^29.3.1",
+    "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.3.1"
   },
   "description": "Next.js (incl. Styled Components and Jest)",
